<resources>
    <string name="app_name">AFC Championship</string>
    <string name="teamB">Jaguars</string>
    <string name="teamNameFont">sans-serif-medium</string>
    <string name="teamA">Patriots</string>
    <string name="teamAScore">0</string>
    <string name="scoreFont">sans-serif-light</string>
    <string name="teamBScore">0</string>
    <string name="touchdownPoints">Touchdown</string>
    <string name="fieldGoalPoints">Field Goal</string>
    <string name="extraPoint">Extra Point</string>
    <string name="safetyPoints">Safety</string>
    <string name="twoPointConversion">Two Point Converstion</string>
</resources>
