<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/patriots_logo"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/teamA"
                android:textSize="@dimen/teamTextSize"
                android:textColor="@color/teamNameColor"
                android:fontFamily="@string/teamNameFont" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/teamAScore"
                android:textSize="@dimen/scoreTextSize"
                android:textColor="@color/scoreTextColor"
                android:fontFamily="@string/scoreFont"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="addSixTeamA"
                android:text="@string/touchdownPoints"
                android:textColor="@color/buttonTextColor"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="addThreeTeamA"
                android:text="@string/fieldGoalPoints"
                android:textColor="@color/buttonTextColor"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="addOneTeamA"
                android:text="@string/extraPoint"
                android:textColor="@color/buttonTextColor"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="addTwoTeamA"
                android:text="@string/safetyPoints"
                android:textColor="@color/buttonTextColor"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="addTwoTeamA"
                android:text="@string/twoPointConversion"
                android:textColor="@color/buttonTextColor"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/jags_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/teamB"
                android:textSize="@dimen/teamTextSize"
                android:textColor="@color/teamNameColor"
                android:fontFamily="@string/teamNameFont" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/teamBScore"
                android:textSize="@dimen/scoreTextSize"
                android:textColor="@color/scoreTextColor"
                android:fontFamily="@string/scoreFont"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="addSixTeamB"
                android:text="@string/touchdownPoints"
                android:textColor="@color/buttonTextColor"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="addThreeTeamB"
                android:text="@string/fieldGoalPoints"
                android:textColor="@color/buttonTextColor"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="addOneTeamB"
                android:text="@string/extraPoint"
                android:textColor="@color/buttonTextColor"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="addTwoTeamB"
                android:text="@string/safetyPoints"
                android:textColor="@color/buttonTextColor"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="addTwoTeamB"
                android:text="@string/twoPointConversion"
                android:textColor="@color/buttonTextColor"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Reset"
        android:onClick="resetScore"
        android:layout_marginBottom="32dp"
        android:textColor="@color/buttonTextColor"
        android:id="@+id/button" />

</RelativeLayout>

